--- a/index.html
+++ b/index.html
@@ -1,1 +1,164 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>DesignFTW Chatroom</title>
+    <script type="importmap">
+    {
+      "imports": {
+        "vue": "https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.esm-browser.js",
+        "@graffiti-garden/implementation-local": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-local@0.6.4/dist/browser/index.js",
+        "@graffiti-garden/implementation-remote": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-remote@0.6.2/dist/browser/index.js",
+        "@graffiti-garden/wrapper-vue": "https://cdn.jsdelivr.net/npm/@graffiti-garden/wrapper-vue@0.7.2/dist/browser/plugin.mjs",
+        "@graffiti-garden/wrapper-files": "https://cdn.jsdelivr.net/npm/@graffiti-garden/wrapper-files@0.0.1/dist/browser/index.js"
+      }
+    }
+    </script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="app" class="app-container">
 
+      <!-- NAV -->
+      <section class="nav-panel">
+        <div class="nav-item" :class="{ active: currentTab==='messages' }" @click="currentTab='messages'">
+          <img src="images/dark-msg-section.png" alt="Messages" />
+        </div>
+        <div class="nav-item" :class="{ active: currentTab==='friends' }" @click="currentTab='friends'">
+          <img src="images/dark-friend-section.png" alt="Friends" />
+        </div>
+        <div class="nav-item" :class="{ active: currentTab==='settings' }" @click="currentTab='settings'">
+          <img src="images/dark-setting-section.png" alt="Settings" />
+        </div>
+      </section>
+
+      <!-- MESSAGES TAB -->
+      <section v-if="currentTab==='messages'" class="panel user-list">
+        <list-section 
+          title="Users"
+          :items="users"
+          :show-remove="false"
+          @select="selectUser"
+        />
+      </section>
+      <section v-if="currentTab==='messages'" class="panel chat-window">
+        <template v-if="selectedChannel">
+          <section class="messages">
+            <graffiti-discover
+              v-slot="{ objects: msgs = [], isInitialPolling }"
+              :channels="[selectedChannel]"
+              :schema="messageSchema"
+            >
+              <div v-if="isInitialPolling" class="loading">Loading…</div>
+              <div
+                v-for="m in msgs.sort((a,b)=>a.value.published - b.value.published)"
+                :key="m.url"
+                class="message"
+                :class="{ mine: m.actor === session?.actor, editing: editingObject?.url === m.url }"
+              >
+                <div class="message-content">
+                  <strong>{{ m.actor === session?.actor ? 'You' : m.actor }}</strong>
+                  {{ m.value.content }}
+                </div>
+                <div class="msg-controls" v-if="m.actor === session?.actor">
+                  <button @click="startEdit(m)" class="edit-btn">Edit</button>
+                  <button @click="deleteMessage(m)" class="delete-btn">Delete</button>
+                </div>
+              </div>
+            </graffiti-discover>
+          </section>
+          <form class="composer" @submit.prevent="editingMessage ? updateMessage() : sendMessage()">
+            <input v-model="myMessage" placeholder="Type a message…" ref="messageInput" required />
+            <button type="submit">{{ editingMessage ? 'Update' : 'Send' }}</button>
+            <button v-if="editingMessage" type="button" @click="cancelEdit" class="cancel-btn">Cancel</button>
+          </form>
+        </template>
+        <template v-else>
+          <div class="no-chat">Select a user to chat.</div>
+        </template>
+      </section>
+
+      <!-- FRIENDS TAB -->
+      <section v-if="currentTab==='friends'" class="panel user-list">
+        <h2>Friends</h2>
+        <ul class="friend-nav">
+          <li v-for="opt in friendOptions" :key="opt.key"
+              :class="{ selected: friendTab===opt.key }"
+              @click="friendTab=opt.key">
+            <img class="friend-nav-icon" :src="opt.icon" />
+            {{ opt.label }}
+          </li>
+        </ul>
+      </section>
+      <section v-if="currentTab==='friends'" class="panel chat-window friends-panel">
+        <template v-if="friendTab==='list'">
+          <div class="add-friend-section">
+            <form @submit.prevent="addFriend(friendActor)" class="friend-form">
+              <input v-model="friendActor" placeholder="User ID…" required>
+              <button type="submit">Add</button>
+            </form>
+          </div>
+          <list-section 
+            title="Your Friends"
+            :items="acceptedFriends"
+            :show-remove="true"
+            @select="selectUser"
+            @remove="removeFriend"
+          />
+        </template>
+
+        <template v-else>
+          <list-section 
+            title="Incoming Requests"
+            :items="friendRequests"
+            :show-remove="false"
+            @select="addFriend"
+          />
+          
+          <list-section 
+            title="Sent Requests"
+            :items="sentRequests"
+            :show-remove="true"
+            @remove="cancelRequest"
+          />
+        </template>
+
+      </section>
+
+      <!-- SETTINGS / PROFILE TAB -->
+      <section v-if="currentTab==='settings'" class="panel chat-window settings-panel">
+        <h2>Profile</h2>
+        <form class="profile-form" @submit.prevent="saveProfile">
+          <label>
+            Picture
+            <input type="file" accept="image/*" @change="onProfilePicChange" />
+          </label>
+          <div v-if="profilePicPreview" class="profile-preview">
+            <img :src="profilePicPreview" alt="Preview" />
+            <button type="button" class="btn-remove-pic" @click="removeProfilePic()">
+              Remove
+            </button>
+          </div>
+          <label>
+            Name
+            <input v-model="profileName" placeholder="Name" required />
+          </label>
+          <label>
+            Pronouns
+            <input v-model="profilePronouns" placeholder="Pronouns" />
+          </label>
+          <label>
+            Bio
+            <textarea v-model="profileBio" placeholder="Short bio…"></textarea>
+          </label>
+          <button type="submit">Save Profile</button>
+        </form>
+        <button class="logout-btn" @click="logout">Log Out</button>
+      </section>
+
+    </div>
+
+    <script src="index.js" type="module"></script>
+  </body>
+</html>
