--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <button class="close-btn" @click="removeMyEmoji">✖</button>
                 </div>
                 <div class="user-emoji">
-                  <strong>{{ selectedUser?.name || "Them" }}:</strong>
+                  <strong>{{ selectedUser?.localId || selectedUser?.name || "Them" }}:</strong>
                   <div class="emoji-box static">{{ otherEmoji || "" }}</div>
                 </div>
               </div>
@@ -99,7 +99,7 @@
                   </div>
                 </div>
                 <div class="user-weather">
-                  <strong>{{ selectedUser?.name || "Them" }}:</strong>
+                  <strong>{{ selectedUser?.localId || selectedUser?.name || "Them" }}:</strong>
                   <div class="weather-box">
                     <div class="weather-details">
                       <div class="location">{{ friendLocation?.city }}</div>
@@ -193,7 +193,7 @@
                     />
                   </div>
                   <div class="user-info">
-                    {{ user.name }}
+                    {{ user.localId || user.name }}
                   </div>
                   <div class="user-actions">
                     <button
@@ -232,7 +232,7 @@
                     @error="e => e.target.src = 'images/profile.png'"
                     alt="avatar"
                   />
-                  <span class="list-label">{{ u.name }}</span>
+                  <span class="list-label">{{ u.localId || u.name }}</span>
                   <div class="request-actions">
                     <button @click="acceptRequest(u.id)" class="btn-accept">Accept</button>
                     <button @click="rejectRequest(u.id)" class="btn-reject">Reject</button>
@@ -246,7 +246,7 @@
 
         <!-- SETTINGS / PROFILE TAB -->
         <section v-if="currentTab==='settings'" class="panel chat-window settings-panel">
-          <h2>{{ profileName || session.actor }}'s Profile</h2>
+          <h2>{{ profileName || session.actor.split('/').filter(Boolean).pop() }}'s Profile</h2>
           <div class="profile-form">
             <label>
               Picture
